--- a/web/dems.html
+++ b/web/dems.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="https://www.ngdc.noaa.gov/js/jquery-3.1.1.min.js"></script>
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-  <script src="https://openlayers.org/en/v4.3.2/build/ol.js"></script>
+  <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
 
 </head>
 <body>
