update logo and kml

--- a/web/dems.html
+++ b/web/dems.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <title>NCEI Coastal Digital Elevation Models</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://openlayers.org/en/v4.3.2/css/ol.css" type="text/css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css">
   <link rel="shortcut icon" href="https://www.ngdc.noaa.gov/favicon.ico">
   <script type="text/javascript" src="https://www.ngdc.noaa.gov/js/jquery-3.1.1.min.js"></script>
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
@@ -62,17 +62,19 @@
   opacity: .5;
   position:absolute;
   display:block;
-  height: 72px;
-  width: 72px;
+  height: 83px;
+  width: 235px;
   bottom: 30px;
   left: 10px;
   text-indent: -9999px;
   z-index:10;
   overflow:hidden;
-  background-image: url(http://www.noaa.gov/sites/all/themes/custom/noaa/images/noaa_logo_circle_72x72.svg);
+  background-image: url(https://cires.colorado.edu/sites/all/themes/CIRES_Bootstrap/icons/cires/cires-triplet-new-new_1.png);
+  <!-- background-image: url(http://www.noaa.gov/sites/all/themes/custom/noaa/images/noaa_logo_circle_72x72.svg); -->
   background-repeat:no-repeat;
   background-position: 0 0 ;
-  background-size: 72px 72px;
+  background-size: 235px 83px;
+  <!-- background-size: 72px 72px; -->
   }
  
   #foot {
