remove zoom to selected on box

--- a/web/dems.html
+++ b/web/dems.html
@@ -183,6 +183,7 @@
       <option value="DEM Tiles">NCEI Tiled Digital Elevation Models</option>
       <option value="All">All Digital Elevation Models </option>
     </select>
+    <div id="zoomBox" class="floatbox"></div>
   </div>
   <div id="info"><strong>Data Access:</strong> <a class="clearSel" id="clearSel"></a>
     <div id="dataLink">
